--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -2,7 +2,7 @@
   background: rgb(254, 231, 214);
   width: 100%;
   display: flex;
-  padding: 80px 0px 120px;
+  padding: 80px 0px 80px;
   position: relative;
   z-index: 0;
 
@@ -32,6 +32,7 @@
     text-shadow: 2px 2px rgb(188, 143, 114);
   }
 
+  
   .cardsContainer {
     display: flex;
     flex-direction: row; 
@@ -71,24 +72,132 @@
         height: 60px;
       }
 
-      .description {
+      .title {
+        height: 0px;
+        width: 100%;
+        font-size: 18px;
+        color: rgba(0,0,0,0);
+        transition: all 0.3s ease-in;
+        letter-spacing: -1px;
+
+        @media only screen and (max-width: 900px) {
+          font-size: 14px;
+          letter-spacing: 0px;
+        }
+      }
+
+      .title.highlight {
+        width: 100%;
+        height: 30px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 40%, rgba(255,255,255,1) 100%);
+        color: rgba(105, 42, 42, 1);
+        padding: 15px 20px;
+        font-size: 18px;
+        font-family: 'Lexend';
+        font-variant: small-caps;
+        transition: all 0.3s ease-in 0.8s;
+
+        @media only screen and (max-width: 900px) {
+          font-size: 14px;
+          padding: 10px 15px;
+        }
+      }
+
+      .text {
         height: 100px;
         width: 100%;
         background-color: rgba(105, 42, 42, 1);
         position: absolute;
         bottom: 0;
         left: 0;
-        transition: all 1s ease-in;
+        transition: background-color 0.5s ease-in;
 
+        @media only screen and (max-width: 900px) {
+          height: 64px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+        }
+      }
+
+      .text.highlight{
+        background-color: rgba(105, 42, 42, 0);
+        background-image: linear-gradient(180deg, rgba(105,42,42,0) 0%, rgba(105,42,42,0.6) 10%, rgba(105,42,42,0.8) 100%);
+ 
         @media only screen and (max-width: 900px) {
           height: 64px;
         }
       }
 
-      .description.highlight{
-        background-color: rgba(105, 42, 42, 0);
-        background-image: linear-gradient(180deg, rgba(105,42,42,0) 0%, rgba(105,42,42,0.5) 20%, rgba(105,42,42,0.9) 100%);
-        transition: all 1s ease-in;
+      .description {
+        font-size: 11px;
+        letter-spacing: 1px;
+        font-family: 'Quicksand-Light';
+        word-wrap: break-word;
+        line-height: 14px;
+        color: rgba(0,0,0,0);
+        padding: 20px 20px 0px 80px;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+                
+
+        @media only screen and (max-width: 900px) {
+          font-size: 9px;
+          max-width: calc(100% - 80px);
+          padding: 10px 20px 0px 60px;
+          line-height: 11px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      .description.highlight {
+        color: #FFF;
+        text-shadow: 1px 1px 1px rgb(0, 0, 0);
+        transition: color 0.5s ease 1s, text-shadow 0.5s ease 1s;
+      }
+
+      .stack {
+        font-size: 10px;
+        font-family: 'NotoSans-Light';
+        letter-spacing: -0.4px;
+        word-wrap: break-word;
+        line-height: 12px;
+        color: rgba(0,0,0,0);
+        padding: 6px 20px 0px 80px;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+                
+
+        @media only screen and (max-width: 900px) {
+          font-size: 8px;
+          max-width: calc(100% - 80px);
+          padding: 0px 20px 8px 60px;
+          line-height: 10px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      .stack.highlight {
+        color: rgb(254, 231, 214);
+        text-shadow: 1px 1px 3px rgb(0, 0, 0);
+        transition: color 0.5s ease 1s, text-shadow 0.5s ease 1s;
       }
 
       .icon {
@@ -129,6 +238,8 @@
       }
     }
   }
+
+  
 }
 
 .resume {
