--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,4 +1,5 @@
 .skills {
+  background-color: #FF8181;
   background-image: url('../../assets/media/BG.png');
   background-size: cover;
   width: 100%;
