--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -117,9 +117,6 @@
 
         @media only screen and (max-width: 900px) {
           height: 64px;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
         }
       }
 
@@ -153,7 +150,7 @@
           padding: 10px 20px 0px 60px;
           line-height: 11px;
           display: -webkit-box;
-          -webkit-line-clamp: 2;
+          -webkit-line-clamp: 3;
           -webkit-box-orient: vertical;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -169,9 +166,9 @@
       .stack {
         font-size: 10px;
         font-family: 'NotoSans-Light';
-        letter-spacing: -0.4px;
+        letter-spacing: 0.3px;
         word-wrap: break-word;
-        line-height: 12px;
+        line-height: 13px;
         color: rgba(0,0,0,0);
         padding: 6px 20px 0px 80px;
         display: -webkit-box;
@@ -184,10 +181,11 @@
         @media only screen and (max-width: 900px) {
           font-size: 8px;
           max-width: calc(100% - 80px);
-          padding: 0px 20px 8px 60px;
-          line-height: 10px;
+          padding: 4px 20px 0px 60px;
+          line-height: 11px;
+          max-height: 11px;
           display: -webkit-box;
-          -webkit-line-clamp: 2;
+          -webkit-line-clamp: 1;
           -webkit-box-orient: vertical;
           overflow: hidden;
           text-overflow: ellipsis;
