--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -458,6 +458,8 @@
   background-size: cover;
   width: 100%;
   padding: 120px 0px;
+  z-index: 0;
+  position: relative;
 
   @media only screen and (max-width: 528px) {
     padding: 80px 0px;
