--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -5,6 +5,8 @@
   width: 100%;
   min-height: 780px;
   padding: 80px 0px 40px;
+  z-index: 0;
+  position: relative;
 
   .content {
     @media only screen and (min-width: 1120px) {
