--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -442,9 +442,9 @@
     transition: all 1s ease;
   }
 
-  .footer {
+  .foot {
     background: linear-gradient(180deg, rgba(254, 231, 214, 0) 0%, rgba(254, 231, 214, 1) 40%);
-    height: 130px;
+    height: 160px;
     width: 100%;
     position: absolute;
     bottom: 0;
