--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -84,8 +84,13 @@
         width: 40px;
         height: 40px;
         border-radius: 25px;
-        background: #FFF;
+        
         align-items: center;
+
+        @media only screen and (max-width: 1366px) {
+          background: #FFF;
+        }
+      
 
         .burger-container {
           position: relative;
