--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -6,7 +6,7 @@
     position: fixed;
     object-fit: cover;
     z-index: -1;
-    filter: opacity(15%);
+    filter: opacity(10%) brightness(150%);
   }
 
   .page {
