--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -50,7 +50,6 @@
           @media only screen and (min-width: 1366px) {
             width: 60px;
             height: auto;
-            
           }
   
           @media only screen and (max-width: 1366px) {
@@ -134,6 +133,10 @@
   .page {
     @media only screen and (min-width: 1366px) {
       margin-top: -252px;
+      padding: 100px 0px 0px;
+    }
+    @media only screen and (max-width: 1366px) {
+      padding: 0px;
     }
     position: relative;
     left: 0;
@@ -143,7 +146,7 @@
     overflow-y: auto;
     display: block;
     transition: all 0.5s ease;
-
+    
     &.open {
       top: 0;
     }
@@ -160,27 +163,136 @@
       margin-top: 60px;
       max-width: 1120px;
       overflow: hidden;
+      
+      .header {
+        font-size: 12px;
+        font-family: 'Lexend';
+        text-transform: uppercase;
+        letter-spacing: 12px;
+        color: #FFF;
+        font-weight: 100;
+        margin: 0px 30px 80px;
+
+        @media only screen and (max-width: 1366px) {
+          margin: 0px 30px 40px;
+        }
+      }
+    }
+
+    .elements {
+      margin: 20px 0px;
+
+      @media only screen and (min-width: 768px) {
+        display: flex;
+      }
+
+      .navigator {
+        width: 40%;
+
+        @media only screen and (max-width: 768px) {
+          width: 100%;
+        }
+      }
+
+      .details {
+        width: 40%;
+        margin: 0px 40px;
+
+        @media only screen and (max-width: 768px) {
+          width: 80%;
+          margin: 100px 40px;
+        }
+
+        .heading {
+          font-family: 'NotoSans-Medium';
+          color: #FFF;
+          font-size: 24px;
+          margin: 0px 0px 60px;
+          line-height: 28px;
+        }
+
+        .subheading {
+          font-family: 'Quicksand';
+          color: #FFF;
+          font-size: 16px;
+          margin: 0px 0px 60px;
+          line-height: 28px;
+          letter-spacing: 1px;
+        }
+
+        .signature {
+          font-family: 'Bathilda';
+          color: rgb(105, 42, 42);
+          letter-spacing: 1px;
+          font-weight: 100;
+          font-variant: normal;
+          font-size: 52px;
+
+          .hspace {
+            font-size: 20px;
+          }
+        }
+      }
+
+      .socials {
+        margin-top: 60px;
+        display: flex;
+        width: 200px;
+        justify-content: space-between;
+        font-size: large;
+        color: #FFF;
+        margin: 100px 0px;
+
+        @media only screen and (max-width: 512px) {
+          margin-top: 30px;
+        }
+
+        a {
+          color: inherit;
+        }
+        a:hover {
+          font-size: xx-large;
+          text-shadow: 2px 2px 8px #000;
+          margin-top: -5px;
+        }
+
+        .facebook:hover {
+          color:#316FF6;
+        }
+        .linkedin:hover {
+          color:#0077b5;
+        }
+        .github:hover {
+          color:#2b3137;
+        }
+        .whatsapp:hover {
+          color:#075e54;
+        }
+        .youtube:hover {
+          color:#CD201F;
+        }
+      }
     }
 
     .container {
       width: auto;
-      margin: 30px 0px;
+      margin: 0px 20px 20px;
       display: flex;
     }
 
     .navlink {
       text-decoration: none;
       font-family: 'Lexend';
-      font-size: 20px;
+      font-size: 38px;
       color: #FFF;
       padding: 0px 10px;
     }
 
     .underline {
       transition: all 0.5s ease;
-      height: 10px;
+      height: 12px;
       background-color: rgb(105, 42, 42);
-      margin: -10px -5px;
+      margin: -16px -5px 0px;
 
       &.active {
         width: calc(100% + 10px);
