--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -28,8 +28,19 @@
     font-size: 48px;
     color: rgb(105, 42, 42);
     font-weight: 900;
-    margin: 0px auto 50px;
+    margin: 0px auto;
     text-shadow: 2px 2px rgb(188, 143, 114);
+  }
+
+  .details {
+    font-family: 'Quicksand';
+    font-weight: 400;
+    font-size: 15px;
+    max-width: 450px;
+    color: #692A2A;
+    line-height: 30px;
+    letter-spacing: 1px;
+    margin: 30px 0px 40px;
   }
 
   
@@ -53,6 +64,31 @@
       box-shadow: 2px 2px 1px rgba(255, 0, 0, 0.2);
       overflow: hidden;
 
+      .player {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        pointer-events: none;
+        opacity: 0;
+        transition: all 0.5s;
+        display: flex;
+        align-content: center;
+        background-color: rgba(255,255,255,0.4);
+      }
+
+      .player.highlight{
+        pointer-events: auto;
+      }
+
+      .player:hover{
+        opacity: 1;
+      }
+
+      .playcon {
+        height: 15%;
+        margin: auto;
+      }
+
       .banner {
         width: 100%;
         height: 100%;
@@ -61,11 +97,13 @@
         background-color: #FF8181;
         opacity: 0.2;
         transition: all 1s ease-in;
+        pointer-events: none;
       }
 
       .banner.highlight{
         opacity: 1;
         transition: all 1s ease-in;
+        pointer-events: auto;
       }
 
       @media only screen and (max-width: 900px) {
@@ -237,8 +275,35 @@
       }
     }
   }
-
   
+}
+
+.videos {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10;
+
+  &.hide{
+    display: none;
+  }
+
+  .area {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .player {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
 }
 
 .resume {
